# placement-client

./: AGENTS.md  README.md  pyproject.toml  requirements-jupyter.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: .gitignore  Dockerfile  README.md  devcontainer.json
demo/: __init__.py  common.py  condor.py  democli.py  device.py
placement/: __init__.py  cli.py  cmd.py  common.py  condor.py  democli.py  demowidgets.py  device.py  jupyter.py  text_ui.py
placement_client/: __init__.py  cmd.py  common.py  device.py  err.py  jupyter.py  text_ui.py
tests/: test_common.py  test_optional_dependencies.py
