[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "placement-client"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "htcondor >= 25.5",
]

[project.optional-dependencies]
jupyter = ["ipywidgets"]

[project.scripts]
placement = "placement.cmd:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["placement*"]
