[metadata]
name = placement-client
version = 0.1.0
python_requires = >=3.6

[options]
packages = find:
install_requires =
    htcondor >= 25.8

[options.packages.find]
where = .
include = placement*

[options.extras_require]
jupyter = ipywidgets
dev =
    black
    isort

[options.entry_points]
console_scripts =
    placement-request = placement.cmd:main
